# subman

./: .cursorignore  .cursorrules  .dockerignore  .gitignore  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  EVALUATION_REPORT.md  FILE_STRUCTURE.md  LICENSE  MOBILE_OPTIMIZATION.md  QUICKSTART.md  QUICK_DEPLOY.md  README.md  deploy.sh  docker-compose.yml  nginx.conf  nginx.conf.example  pyproject.toml  start.bat  start.ps1  start.sh  subman.service
assets/: .gitkeep
data/: Service.csv  Subscribe.csv  exchangerate.csv  history.csv  notification_log.csv  subscriptions.csv
src/: config.py  main.py  remind.py
src/components/: __init__.py  analytics.py  dashboard.py  table.py
src/utils/: __init__.py  currency.py  data_loader.py  exporter.py  history.py  importer.py  notifications.py  responsive.py  validator.py
tests/: test_auto_renewals.py  test_calculator.py  test_currency.py  test_exporter.py  test_validator.py
